fixed background image

--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
       <section>
         <div class="contentLeft">
           <h1>Web Design & <br /><span>Development</span> <br />Course</h1>
-          <p class="par">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque
-            expedita atque eveniet <br />
-            quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus
-            <br />
-            a quae totam ipsa illum minus laudantium?
-          </p>
+          <div class="par">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+              neque expedita atque eveniet
+            </p>
+            <p>
+              quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad
+              delectus
+            </p>
+            <p>quae totam ipsa illum minus laudantium?</p>
+          </div>
 
           <button class="cn"><a href="contact.html">JOIN US</a></button>
         </div>
@@ -68,10 +72,21 @@
           </div>
         </div>
       </section>
-      <!-- 
+
       <footer>
-        <p>@copyright</p>
-      </footer> -->
+        <div>
+          <p>@copyright</p>
+          <p>@copyright</p>
+          <p>@copyright</p>
+          <p>@copyright</p>
+        </div>
+        <div>
+          <p>@copyright</p>
+          <p>@copyright</p>
+          <p>@copyright</p>
+          <p>@copyright</p>
+        </div>
+      </footer>
     </div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
